# books-stores-parsing

./: .gitignore  .pre-commit-config.yaml  LICENSE  book_store_dag.py  parse.py  parsing.py  publishing.py  pyproject.toml  read_from_spark.py  setup.cfg  spark_streaming.py  write_to_spark.py
books_stores_parsing/: parsing.py  publishing.py
books_stores_parsing/abstractions/creators/: article_creator.py  post_creator.py
books_stores_parsing/abstractions/parsing/: book_parser.py  requester.py
books_stores_parsing/abstractions/publishing/: article_publisher.py  post_publisher.py
books_stores_parsing/book24/: parser.py
books_stores_parsing/litres/: parser.py
books_stores_parsing/livelib/: parser.py
books_stores_parsing/multithreading/: thread_with_value.py
books_stores_parsing/requesting/: rest_requester.py
books_stores_parsing/telegram/: bot_publisher.py  post_creator.py
books_stores_parsing/telegraph/: article_creator.py  article_publisher.py
configs/: book_categories.yaml  book_selling_types.yaml  path_config.yaml  store_ids.yaml
patterns/: book_card_pattern.txt
