[tool.poetry]
name = "books-stores-parsing"
version = "0.1.0"
description = ""
authors = ["Olga Golovkina"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
pre-commit = "^3.6.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pandas = "^2.1.4"
certifi = "^2023.11.17"
yarl = "^1.9.4"
hydra-core = "^1.3.2"
lxml = "^5.1.0"
telegraph = "^2.2.0"
pytelegrambotapi = "^4.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
